Corrigindo botões de redes sociais

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <p id="welcome-text">Seja bem-vindo!</p>    
             <ul id="social-container">
                 <li>
-                    <a href="www.linkedin.com/in/jorgepontes13"></a><ion-icon name="logo-linkedin"></a>
+                    <a href="https://www.linkedin.com/in/jorgepontes13"><ion-icon name="logo-linkedin"></a>
                 </li>
                 <li>
-                    <a href="github.com/jorgeapontes"></a><ion-icon name="logo-github"></a>
+                    <a href="https://github.com/jorgeapontes"><ion-icon name="logo-github"></a>
                 </li>
             </ul>
             <div id="email-container">
